--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,28 +1,24 @@
-﻿cmake_minimum_required (VERSION 3.14)
-
-project(project)
-
-set (CMAKE_CXX_STANDARD 17)
-set (CMAKE_CXX_STANDARD_REQUIRED ON)
-set (CMAKE_CXX_EXTENSIONS OFF)
-if (MSVC)
-	add_compile_options (/permissive-)
-endif ()
-
-add_executable (project "")
-
-add_subdirectory (include)
-add_subdirectory (src)
-add_subdirectory (resources)
-
-set (SFML_STATIC_LIBRARIES TRUE)
-set (SFML_DIR "C:/SFML/SFML-2.5.1/lib/cmake/SFML")
-
-find_package (SFML 2.5 COMPONENTS graphics audio REQUIRED)
-
-set_target_properties (sfml-main sfml-system sfml-window sfml-graphics sfml-audio
-sfml-network PROPERTIES MAP_IMPORTED_CONFIG_RELWITHDEBINFO RELEASE)
-
-target_link_libraries (project sfml-audio sfml-graphics sfml-main)
-
-configure_file (C:/SFML/SFML-2.5.1/bin/openal32.dll ${CMAKE_BINARY_DIR} COPYONLY)
+﻿configure_file ("LEVEL1.txt" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("LEVEL2.txt" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("LEVEL3.txt" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("LEVEL4.txt" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("money.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("monsterConstMove.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("monsterRandom.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("monsterToPlayer.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("player.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("wall.jpg" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("ladder.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("rod.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("OpenScreen.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("clock.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("menu.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("present.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("GameOver.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Win.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("gameOverMusic.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("moneySound.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("monsterToPlayer.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("playGame.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("winMusic.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("presentMusic.wav" ${CMAKE_BINARY_DIR} COPYONLY)
